fixed flex wrap

--- a/index.css
+++ b/index.css
@@ -126,11 +126,15 @@ body {
 }
 
 #detalji-vencanja {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  min-width: 80vw;
+  max-width: 100vw;
   padding-top: 10vh;
   padding-bottom: 10vh;
-  margin-left: 20%;
-  margin-right: 20%;
   background: radial-gradient(ellipse at center, #ebe5e2, #ebe5e200);
 }
 
@@ -195,6 +199,22 @@ body {
 .nav-link {
   color: #414f41;
   background: radial-gradient(ellipse at center, #ebe5e2, #ebe5e22a);
+}
+
+.section-card {
+  min-height: 60vh;
+  margin: 20px;
+  max-width: 80vw;
+}
+
+@media screen and (max-width: 1200px) {
+  .home-title {
+    font-size: 6rem;
+  }
+
+  .home-subtitle {
+    font-size: 2rem;
+  }
 }
 
 @media screen and (max-width: 900px) {
